--- a/HW_ProfileBook/HW_ProfileBook/HW_ProfileBook.csproj
+++ b/HW_ProfileBook/HW_ProfileBook/HW_ProfileBook.csproj
@@ -26,4 +26,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Authentication\" />
+  </ItemGroup>
+
 </Project>
