--- a/HW_ProfileBook/HW_ProfileBook.Android/HW_ProfileBook.Android.csproj
+++ b/HW_ProfileBook/HW_ProfileBook.Android/HW_ProfileBook.Android.csproj
@@ -220,6 +220,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_settings.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
