--- a/HW_ProfileBook/HW_ProfileBook/HW_ProfileBook.csproj
+++ b/HW_ProfileBook/HW_ProfileBook/HW_ProfileBook.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="Views\MainList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Settings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SignIn.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
